# saw-project

./: .gitignore  Dockerfile  composer.json  config.json  consts.toml  docker-compose.yml  package.json  pnpm-lock.yaml  psalm.xml  pyproject.toml  specs.html  tsconfig.json
.github/workflows/: deploy.yml  test.yml
presentation/: presentation.md
scripts/: build.sh  consts.py  dev.sh  execute.py  sql.py  upload.py
scripts/php/: logs.php  sql.php
scripts/sql/: clear.sql
src/: .htaccess  admin.php  attachment.php  challenges.php  copyright.php  index.php  logout.php  privacy.php  scoreboard.php  show_profile.php
src/api/: challenge_description.php  complete_challenge.php  delete_attachment.php  delete_challenge.php  edit_challenge.php  edit_password.php  email_exists.php  login.php  registration.php  update_profile.php  upload_attachment.php  upload_challenge.php  username_exists.php
src/css/: style.css  tokens.css
src/db/: attachments.php  challenges.php  completed.php  db.php  jwt.php  scoreboard.php  user.php
src/php/: api_consts.php  consts.php  entrypoint.php  exceptions.php  filters.php  imports.php  jwt.php  session.php  utils.php
src/templates/: footer.php  head.php  navbar.php  not_found.php  server_error.php
src/ts/: admin.ts  api.ts  api_consts.ts  challenges.ts  dark.ts  login.ts  profile.ts  register.ts  utils.ts  validator.ts
tests/: test_all.php  test_login.php  test_register.php  test_show.php  test_update.php
